Adicionei um parágrafo
Um parágrafo com Lorem foi adicionado na página principal (index) como o Olá, Mundo! do meu primeiro site com repositório git&github.Criado durante curso de git&github.

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -16,6 +16,8 @@
 
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, quia dignissimos, illo sed recusandae adipisci ut suscipit consequatur architecto voluptatum expedita quas similique ex quaerat incidunt! Ratione quas porro quam.</p>
 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, eaque laborum! Quasi aliquid architecto, itaque neque eaque voluptates cupiditate corporis illo dolor, natus dicta ducimus expedita. Ad facilis dolorum vero.</p>
+
     <body>
         
     </body>
